[package]
name = "sealify"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
chrono = "0.4.38"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["sha2"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
uuid = { version = "1.11.0", features = ["v4"] }
